--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,9 @@
 body {
-    background-color: #f9f7fe;
-    font-family: Helvetica, Arial, sans-serif;
+   background-image: url(/image/fondo.jpg);
+   background-size: 100% 100%; /* Ajusta la imagen sin recortarla */
+    background-position: center; /* Centra la imagen */
+    background-repeat: no-repeat; /* Evita que la imagen se repita */
+    background-attachment: fixed;
   }
   
   a {
@@ -21,16 +24,16 @@ body {
     font-weight: 800;
     font-size: 36px;
     line-height: 1.5;
-    color: #272044;
+    color: #CA9CE8;
   }
   
   form {
-    padding: 30px;
-    background-color: white;
+    padding: 20px;
+    backdrop-filter: blur(20px);
     box-shadow: 0px 20px 60px rgba(65, 50, 100, 0.08);
     border-radius: 10px;
     display: flex;
-    margin-bottom: 30px;
+    margin-top: 30px;
   }
   
   .instructions {
@@ -45,7 +48,7 @@ body {
   
   .submit-button {
     margin-left: 10px;
-    background: #885df1;
+    background: #CA9CE8;
     color: white;
     border: none;
     width: 150px;
@@ -59,7 +62,7 @@ body {
     background-color: #fff;
     padding: 20px;
     line-height: 2;
-    border-left: 3px solid #885df1;
+    border-left: 3px solid #ABB787;
     box-shadow: 0px 4px 30px 0px rgba(39, 33, 66, 0.03);
   }
   
