--- a/src/style.css
+++ b/src/style.css
@@ -38,7 +38,7 @@ body {
   
   .instructions {
     padding: 16px;
-    border: 1px solid rgba(39, 33, 66, 0.5);
+    border: 2px solid #ABB787;
     width: 80%;
     font-size: 16px;
     border-radius: 50px;
