--- a/src/style.css
+++ b/src/style.css
@@ -1,73 +1,132 @@
 body {
-   background-image: url(/image/fondo.jpg);
-   background-size: 100% 100%; /* Ajusta la imagen sin recortarla */
-    background-position: center; /* Centra la imagen */
-    background-repeat: no-repeat; /* Evita que la imagen se repita */
-    background-attachment: fixed;
-  }
-  
-  a {
-    color: #885df1;
-  }
-  
-  .container {
-    margin: 120px auto;
-    max-width: 600px;
-  }
-  
-  header {
-    margin-bottom: 30px;
-  }
-  
-  h1 {
-    text-align: center;
-    font-weight: 800;
-    font-size: 36px;
-    line-height: 1.5;
-    color: #CA9CE8;
-  }
-  
-  form {
-    padding: 20px;
-    backdrop-filter: blur(20px);
-    box-shadow: 0px 20px 60px rgba(65, 50, 100, 0.08);
-    border-radius: 10px;
-    display: flex;
-    margin-top: 30px;
-  }
-  
-  .instructions {
-    padding: 16px;
-    border: 2px solid #ABB787;
-    width: 80%;
-    font-size: 16px;
-    border-radius: 50px;
-    line-height: 20px;
-    color: #272044;
-  }
-  
-  .submit-button {
-    margin-left: 10px;
-    background: #CA9CE8;
-    color: white;
-    border: none;
-    width: 150px;
-    font-size: 16px;
-    border-radius: 50px;
-    padding: 14px 24px;
-  }
-  
-  .poem {
-    font-size: 16px;
-    background-color: #fff;
-    padding: 20px;
-    line-height: 2;
-    border-left: 3px solid #ABB787;
-    box-shadow: 0px 4px 30px 0px rgba(39, 33, 66, 0.03);
-  }
-  
-  footer {
-    text-align: center;
-    font-size: 13px;
-    margin-top: 30px;
-  }
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+  background-image: url(/image/fondo.jpg);
+  background-size: 100% 100%; /* Ajusta la imagen sin recortarla */
+  background-position: center; /* Centra la imagen */
+  background-repeat: no-repeat; /* Evita que la imagen se repita */
+  background-attachment: fixed;
+}
+
+a {
+  color: #abb787;
+}
+
+.container {
+  margin: 50px auto;
+  max-width: 600px;
+}
+
+header {
+  margin-bottom: 30px;
+}
+
+h1 {
+  text-align: center;
+  font-weight: 800;
+  font-size: 36px;
+  line-height: 1.5;
+  color: #ca9ce8;
+}
+
+form {
+  padding: 20px;
+  backdrop-filter: blur(20px);
+  box-shadow: 0px 20px 60px rgba(65, 50, 100, 0.08);
+  border-radius: 10px;
+  display: flex;
+  margin-top: 30px;
+}
+
+.instructions {
+  padding: 16px;
+  border: 2px solid #abb787;
+  width: 80%;
+  font-size: 16px;
+  border-radius: 50px;
+  line-height: 20px;
+  color: #272044;
+}
+
+.submit-button {
+  margin-left: 10px;
+  background: #abb787;
+  color: white;
+  border: none;
+  width: 150px;
+  font-size: 16px;
+  border-radius: 50px;
+  padding: 14px 24px;
+}
+
+.poem {
+  text-align: center;
+  font-size: 16px;
+  background-color: #fff;
+  padding: 15px;
+  line-height: 2;
+  border-left: 4px solid #abb787;
+  box-shadow: 0px 4px 30px 0px rgba(39, 33, 66, 0.03);
+}
+
+.poem p {
+  margin: 0;
+}
+
+.poem strong {
+  color: #abb787;
+}
+
+.poem img {
+  margin: 5px;
+  width: 150px;
+  height: 25px;
+}
+
+footer {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background: #8b8f66;
+  padding: 10px;
+  text-align: center;
+  overflow: hidden;
+}
+
+footer .footer-content {
+  margin: 5px 20px;
+  font-size: 13px;
+  font-weight: 600;
+}
+
+footer .footer-content p {
+  margin: 0;
+}
+
+footer a {
+  color: white;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+footer a:hover {
+  text-decoration: underline;
+  color: #9b59b6;
+}
+
+.social-icons {
+  margin-top: 10px;
+}
+
+.social-icons a {
+  color: white;
+  font-size: 13px;
+  margin: 0 10px;
+  text-decoration: none;
+}
+
+.social-icons a:hover {
+  color: #9b59b6;
+}
