--- a/src/style.css
+++ b/src/style.css
@@ -27,16 +27,26 @@ h1 {
   font-weight: 800;
   font-size: 36px;
   line-height: 1.5;
-  color: #ca9ce8;
+  color: #9b59b6;
+}
+
+.form-container {
+  box-shadow: 0px 20px 60px rgba(65, 50, 100, 0.08);
+  border-radius: 10px;
+  backdrop-filter: blur(20px);
+  margin-top: 30px;
+  padding: 15px 20px ;
 }
 
 form {
-  padding: 20px;
-  backdrop-filter: blur(20px);
-  box-shadow: 0px 20px 60px rgba(65, 50, 100, 0.08);
-  border-radius: 10px;
   display: flex;
-  margin-top: 30px;
+}
+
+.hint {
+  line-height: 1.5;
+  font-size: 15px;
+  margin-top: 10px;
+  opacity: 0.6;
 }
 
 .instructions {
@@ -58,6 +68,12 @@ form {
   font-size: 16px;
   border-radius: 50px;
   padding: 14px 24px;
+  transition: all 300ms ease-in-out;
+}
+
+.submit-button:hover{
+  background-color:#9b59b6 ;
+  color: black;
 }
 
 .poem {
@@ -68,6 +84,24 @@ form {
   line-height: 2;
   border-left: 4px solid #abb787;
   box-shadow: 0px 4px 30px 0px rgba(39, 33, 66, 0.03);
+}
+
+.poem .clock{
+  display: flex;
+  align-items: center;
+}
+
+.poem .charging{
+  width: 50px;
+  height: 50px;
+}
+
+.poem span{
+  display: block;
+}
+
+.hidden{
+  display: none;
 }
 
 .poem p {
@@ -109,6 +143,7 @@ footer a {
   color: white;
   text-decoration: none;
   font-weight: bold;
+  transition: all 300ms ease-in-out;
 }
 
 footer a:hover {
@@ -125,8 +160,26 @@ footer a:hover {
   font-size: 13px;
   margin: 0 10px;
   text-decoration: none;
+  display: inline-block;
+  transition: transform 300ms ease-in-out;
 }
 
 .social-icons a:hover {
   color: #9b59b6;
+  transform: scale(1.2);
+}
+
+.generating {
+  animation: blink-animation 1s steps(5, start) infinite;
+}
+
+@keyframes blink-animation {
+  to {
+    visibility: hidden;
+  }
+}
+@-webkit-keyframes blink-animation {
+  to {
+    visibility: hidden;
+  }
 }
